tests/ui/abi/sparcv8plus.sparc.stderr
error: -v8plus,-v9
  --> $DIR/sparcv8plus.rs:29:1
   |
LL | compile_error!("-v8plus,-v9");
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

